--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.1",
+    "@heroicons/react": "^1.0.6",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
+    "emailjs-com": "^3.2.0",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
-    "react-responsive-carousel": "^3.2.23"
+    "react-icons": "^5.2.1",
+    "react-responsive-carousel": "^3.2.23",
+    "supports-color": "^9.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
